--- a/cpu/Cargo.toml
+++ b/cpu/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "gb-rs-memory"
+name = "gb-rs-cpu"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-gb-rs-core = { path = "../core" }
+gb-rs-core = { "path" = "../core" }
+gb-rs-memory = { "path" = "../memory" }
