Begin converting repetitive instructions to proc macros

--- a/cpu/Cargo.toml
+++ b/cpu/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2018"
 [dependencies]
 gb-rs-core = { "path" = "../core" }
 gb-rs-memory = { "path" = "../memory" }
+gb-rs-cpu-macros = { "path" = "./macros" }
