--- a/asm/Cargo.toml
+++ b/asm/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2021"
 [dependencies]
 parse-display = "0.6"
 thiserror = "1.0"
+
+[dev-dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
