--- a/asm-cli/Cargo.toml
+++ b/asm-cli/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 clap = { version = "4.0", features = ["derive"] }
 gb_rs_asm = { path = "../asm" }
 clap-num = "1.0"
+console = "0.15"
+dialoguer = "0.10"
