--- a/cpu/Cargo.toml
+++ b/cpu/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+gb_rs_asm = { path = "../asm" }
 gb-rs-core = { "path" = "../core" }
 gb-rs-memory = { "path" = "../memory" }
-gb-rs-cpu-macros = { "path" = "./macros" }
