--- a/test-cli/Cargo.toml
+++ b/test-cli/Cargo.toml
@@ -1,13 +1,16 @@
 [package]
-name = "gb_rs_asm_cli"
+name = "gb_rs_test_cli"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.0", features = ["derive"] }
-gb_rs_asm = { path = "../asm" }
+clap = { version = "4.1", features = ["derive"] }
 clap-num = "1.0"
 console = "0.15"
 dialoguer = "0.10"
+gb-rs-cpu = { path = "../cpu" }
+gb-rs-memory = { path = "../memory" }
+gb_rs_asm = { path = "../asm" }
+thiserror = "1.0"
